data/derived/comb/progs/unify/prog2996.ml.out
Characters 66-67:
  | false -> 1;;
             ^
Error: This expression has type int but an expression was expected of type
         'a list
